--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,6 @@
 # Dependencies
 node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+jspm_packages/
 
 # Logs
 logs/
@@ -44,10 +35,6 @@ bower_components/
 # Compiled binary addons
 build/Release
 
-# Dependency directories
-node_modules/
-jspm_packages/
-
 # TypeScript v1 declaration files
 typings/
 
@@ -78,8 +65,12 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# parcel-bundler cache
+# parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
 
@@ -118,8 +109,33 @@ temp/
 ehthumbs.db
 Thumbs.db
 
-# Build outputs (React build)
+# React build artifacts
 car-rental-frontend/build/
+car-rental-frontend/dist/
+
+# Vercel deployment files
+.vercel/
+
+# Package manager lock files (keep package-lock.json but ignore others)
+yarn.lock
+pnpm-lock.yaml
+
+# IDE and editor files
+.vscode/settings.json
+*.sublime-project
+*.sublime-workspace
+
+# MacOS
+.AppleDouble
+.LSOverride
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Linux
+*~
 
 # Database files
 *.db
