--- a/car-rental-frontend/vercel.json
+++ b/car-rental-frontend/vercel.json
@@ -22,6 +22,6 @@
     }
   ],
   "env": {
-    "REACT_APP_API_URL": "http://localhost:5000/api"
+    "REACT_APP_API_URL": "https://chalyatiindia.onrender.com/api"
   }
 }
