feat: Improve responsive design and admin functionality
- Add responsive breakpoints for subscription benefits table (769px-1024px, 601px-768px, 481px-600px, 320px-480px)
- Implement gradual scaling for comparison table across all screen sizes
- Update offers section responsive layout for mobile devices
- Enhance admin panel functionality and API endpoints
- Improve image utilities and error handling
- Update environment configuration

--- a/car-rental-frontend/.env.example
+++ b/car-rental-frontend/.env.example
@@ -1,7 +1,6 @@
 # API Configuration
-REACT_APP_API_URL=http://localhost:5000/api
-REACT_APP_SOCKET_URL=http://localhost:5000
-
+REACT_APP_API_URL=https://chalyatiindia.onrender.com/api
+REACT_APP_SOCKET_URL=https://chalyatiindia.onrender.com
 # App Configuration
 REACT_APP_NAME=CHALYATI
 REACT_APP_VERSION=1.0.0
